max-width remove blog/about

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -70,11 +70,11 @@
         <!-- adddon content section[start] -->
         <section>
             <div class="content_area_articles pt-2 pb-5">
-                <div class="container max-960">
+                <div class="container">
                     <!-- 1 -->
                     <div class="each_articles">
                         <div class="row align-items-center">
-                            <div class="col-lg-10 offset-lg-1 col-12">
+                            <div class="col-12">
                                 <div class="content_area_articles_copy">
                                     <h3>Deep Learning 101 from PICT</h3>
                                     <div class="pb-2 dated">22 Nov 2018</div>
