--- a/blog/templates/blog/postDetail.html
+++ b/blog/templates/blog/postDetail.html
@@ -4,12 +4,13 @@
 <html lang="en" dir="ltr">
 
 <head>
-    <title>odinAI</title>
-
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <title>OdinAI</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" />
+
     <!-- STYLESHEETS -->
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
@@ -108,8 +109,18 @@
 .postContentSM {
   font-size: 4.5vmin;
 }
-
-
+.postContent ul{padding-left: 30px;}
+.postContent ul ul{padding-left: 15px;}
+@media(max-width:767px){
+    main .container{
+        padding: 0 15px;
+    }
+    .AuthorDetails{font-size:1rem;}
+    .AuthorDesignation{font-size: 0.8rem;}
+    .postDescriptionxl,.postContent ul li,.postContent{font-size: 0.9rem;}
+    .postImagexl{padding-top:10px;}
+    
+}
 </style>
 
 </head>
@@ -121,12 +132,10 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-3">
-                        <div class="main_nav_holder--img">
-                            <img src="{% static 'images/conts/odinai-transparent.png' %}" 
-                            data-top="{% static 'images/conts/odinai-transparent.png' %}"
-                            data-down="{% static 'images/conts/odinai-transparent.png' %}" 
-                            class="img-fluid" alt="OdinAI">
-                        </div>
+                        <a href="{% url 'index'  %}" class="main_nav_holder--img">
+                            <!-- <img src="{% static 'images/odinai-transparent.png' %}" class="img-fluid" alt="OdinAI"> -->
+                            <img src="{% static 'images/odinai-transparent.png' %}" class="img-fluid" alt="OdinAI">
+                        </a>
                     </div>
                     <div class="col-md-9">
                         <div class="main_nav_holder_links">
@@ -147,6 +156,8 @@
         </div>
     </nav>
     <main>
+        <div class="py-5"></div>
+        <div class="py-md-2"></div>
         <!-- banner[start] -->
         <!-- <section>
             <div class="main_banner small">
@@ -166,75 +177,34 @@
         </section> -->
         <!-- banner[end] -->
         <!-- adddon content section[start] -->
-          <!-- BLOG POSTS  -->
 
-          <div class="blogPostsContainer d-block d-sm-none d-none d-sm-block d-md-none d-none d-md-block d-lg-none">
-            <div class="container blogPage">
-        
-                <div class="row rowWrapper"> 
-                  <div class="col"></div>
-                  <div class="col-10">
-                      <div class="postTitle">{{Posts.posttitle}}</div>
-                      <div class="postImage"><img src="/media/{{Posts.image}}" id="postImageID"/></div>
-                      <div class="postDescription">{{Posts.postsummary}}</div>
-                      <hr/> 
-                      <div class="AuthorDetailsSM">{{Posts.authorfirstname}} {{Posts.authorlastname}}</div>
-                      <div class="AuthorDesignationSM">{{Posts.authordesignation}}</div>
-                      <div class="AuthorBgSM">{{Posts.authorbg}}</div>
-                      <div class="postDate">{{Posts.created_at|date:"d M Y"}}</div>
-                      <hr/> 
-                  </div>
-                  <div class="col"></div>
-                </div> 
+        <!-- BLOG POSTS for XL -->
 
-                <div class="row rowWrapper"> 
-                    <div class="col"></div>
-                    <div class="col-10 postContentSM">{{Posts.postcontent | safe}}</div>
-                    <div class="col"></div>
-                </div> 
-              
-        
-            </div>
-          </div>
-
-      <!-- BLOG POSTS for XL -->
-
-        <div class="blogPostsContainer d-none d-lg-block d-xl-none d-none d-xl-block">
-            <div class="container blogPage">
-                <div class="row container rowWrapperXL"> 
-                    <div class="col-8">
+        <!-- <div class="blogPostsContainer d-none d-lg-block d-xl-none d-none d-xl-block"> -->
+            <div class="container max-960">
+                <div class="row"> 
+                    <div class="col-md-9 col-12">
                         <div class="postTitlexl">{{Posts.posttitle}}</div>
                         <!-- <div class="postDatexl">{{Posts.created_at|date:"d M Y"}}</div> -->
                         <div class="AuthorDetails">{{Posts.authorfirstname}} {{Posts.authorlastname}} | {{Posts.created_at|date:"d M Y"}}</div>
-                            <div class="AuthorDesignation">{{Posts.authordesignation}}</div>
-                            
-                             <hr/>
+                        <div class="AuthorDesignation">{{Posts.authordesignation}}</div>
+                        <hr/>
                         <div class="postDescriptionxl">{{Posts.postsummary}}</div>
-                        
                     </div>
-                    <div class="col-1"></div>
-                    <div class="col-3">
-                            <div class="postImagexl"><img src="/media/{{Posts.image}}" id="postImageID"/></div>
-                            
+                    <div class="col-md-3 col-12">
+                        <div class="postImagexl">
+                            <img src="/media/{{Posts.image}}" class="img-fluid" id="postImageID"/>
+                        </div>
                     </div>
                 </div> 
-                
-                <!-- <div class="row container rowWrapperXL"> 
-                    <div class="col-8">
-                            
-            <div class="AuthorBg">{{Posts.authorbg}}</div> 
-                    </div>
-                    <div class="col-4"></div>
-                </div>  -->
 
-                <div class="row container rowWrapperXL">
+                <div class="row pt-3">
                     <div class="col-12 postContent">
-                            {{Posts.postcontent | safe}}
+                        {{Posts.postcontent | safe}}
                     </div>
                 </div> 
-        
             </div>
-        </div>
+        <!-- </div> -->
         <!-- adddon content section[end] -->
         <!-- contact us[start] -->
         <section>
@@ -272,79 +242,31 @@
     </footer>
     <!-- JAVASCRIPT -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
-    <script src="{% static 'js/c-render.js' %}"></script>
     <script>
-        particlesJS("particles-js", {
-            "particles": {
-                "number": {
-                    "value": 77,
-                    "density": {
-                        "enable": true,
-                        "value_area": 1203
-                    }
-                },
-                "color": {
-                    "value": "#ffffff"
-                },
-                "shape": {
-                    "type": "circle",
-                    "stroke": {
-                        "width": 0,
-                        "color": "#000000"
-                    },
-                    "polygon": {
-                        "nb_sides": 1000
-                    },
-                    "image": {
-                        "src": "img/github.svg",
-                        "width": 150,
-                        "height": 150
-                    }
-                },
-                "opacity": {
-                    "value": 0.5,
-                    "random": false,
-                    "anim": {
-                        "enable": false,
-                        "speed": 1,
-                        "opacity_min": 0.1,
-                        "sync": false
-                    }
-                },
-                "size": {
-                    "value": 4,
-                    "random": true,
-                    "anim": {
-                        "enable": false,
-                        "speed": 210,
-                        "size_min": 0.3,
-                        "sync": true
-                    }
-                },
-                "line_linked": {
-                    "enable": true,
-                    "distance": 224,
-                    "color": "#ffffff",
-                    "opacity": 0.4,
-                    "width": 1
-                },
-                "move": {
-                    "enable": true,
-                    "speed": 2,
-                    "direction": "none",
-                    "random": false,
-                    "straight": false,
-                    "out_mode": "out",
-                    "bounce": true,
-                    "attract": {
-                        "enable": true,
-                        "rotateX": 1200,
-                        "rotateY": 1200
-                    }
+        jQuery(document).ready(function ($) {
+            // navigation action[start]
+            $(window).on("load scroll", function () {
+                if ($(window).scrollTop() > 0) {
+                    //$(".main_nav").addClass("nav-active");
+                    //var btmImg = $(".main_nav_holder--img img").attr("data-down");
+                    //$(".main_nav_holder--img img").attr("src", btmImg);
+                    //console.log(btmImg);
+                } else {
+                    //$(".main_nav").removeClass("nav-active");
+                    //var upImg = $(".main_nav_holder--img img").attr("data-top");
+                    //console.log(upImg);
+                    //$(".main_nav_holder--img img").attr("src", upImg);
                 }
-            },
-            "retina_detect": true
-        });
+            });
+            // navigation action[end]
+            // mobile btn[start]
+            $(".ham-btn").on("click", function () {
+                $(".main_nav_holder_links").toggleClass("mob-active");
+                $(this).toggleClass("active");
+                $(this).find("i").toggleClass("fa-times");
+            });
+            // mobile btn[end]
+        }(jQuery));
     </script>
 
 </body>
