--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -4,12 +4,13 @@
 <html lang="en" dir="ltr">
 
 <head>
-    <title>odinAI</title>
-
+    
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <title>OdinAI</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" />
     <!-- STYLESHEETS -->
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
@@ -39,7 +40,7 @@
 
 <body>
     <!-- navigation -->
-    <nav class="main_nav nav-active">
+    <nav class="main_nav">
         <div class="main_nav_holder">
             <div class="container">
                 <div class="row align-items-center">
@@ -71,9 +72,9 @@
         <!-- banner[start] -->
         <section>
             <div class="main_banner small">
-                <div class="container h-100">
+                <div class="container h-100 max-960">
                     <div class="row align-items-center h-100">
-                        <div class="col-md-6 col-12">
+                        <div class="col-md-10 col-12">
                             <div class="main_banner_content">
                                 <h1 class="main_banner_content--head">Resources to learn Deep Learning, companies to apply to, and much more.</h1>
                             </div>
@@ -90,52 +91,32 @@
         <section>
             <div class="content_area_articles pt-2 pb-5">
                 <div class="container max-960">
-                        <div class="blogPostsContainer d-none d-lg-block d-xl-none d-none d-xl-block">
-                                <div class="container blogPage">
-                            
-                                  {% for post in Posts %}
-                            
-                                  <div class="row container rowWrapperXL"> 
-                                      <div class="col-8">
-                                          <div class="postTitlexl"><a href="{% url 'postDetail' pk=post.pk %}">{{post.posttitle}}</a></div>
-                                          <div class="postDescriptionxl">{{post.postsummary}}</div>
-                                          <div class="postDatexl">{{post.created_at|date:"d M Y"}}</div>
-                                      </div>
-                                      <div class="col-1"></div>
-                                      <div class="col-3">
-                                          <div class="postImagexl"><img src="/media/{{post.image}}" id="postImageID"/></div>
-                                      </div>
-                                      
-                                  </div> 
-                                  <hr/> 
-                                  {% endfor %}
-                            
+                    <!-- <div class="blogPostsContainer d-none d-lg-block d-xl-none d-none d-xl-block"> -->
+                    <!-- <div class="container blogPage"> -->
+                    {% for post in Posts %}
+                    <div class="each_articles">
+                        <div class="row"> 
+                            <div class="col-md-9 col-12">
+                                <div class="content_area_articles_copy">
+                                    <h3 class=""><a href="{% url 'postDetail' pk=post.pk %}">{{post.posttitle}}</a></h3>
+                                    <p class="">{{post.postsummary}}</p>
+                                    <div class="text-secondary pt-2">{{post.created_at|date:"d M Y"}}</div>
                                 </div>
                             </div>
+                            <div class="col-md-3 col-12">
+                                <div class="content_area_articles_img">
+                                    <!-- <div class="postImagexl"> -->
+                                        <img src="/media/{{post.image}}" id="postImageID"/>
+                                    <!-- </div> -->
+                                </div>
+                            </div>
+                        </div> 
+                    </div>
+                    {% endfor %}
+                    <!-- </div> -->
+                    <!-- </div> -->
                 </div>
             </div>
-
-            <div class="blogPostsContainer d-block d-sm-none d-none d-sm-block d-md-none d-none d-md-block d-lg-none">
-                    <div class="container blogPage">
-                
-                      {% for post in Posts %}
-                
-                      <div class="row rowWrapper"> 
-                          <div class="col"></div>
-                          <div class="col-10">
-                              <div class="postTitle"><a href="{% url 'postDetail' pk=post.pk %}">{{post.posttitle}}</a></div>
-                              <div class="postImage"><img src="/media/{{post.image}}" id="postImageID"/></div>
-                              <div class="postDescription">{{post.postsummary}}</div>
-                              <div class="postDate">{{post.created_at|date:"d M Y"}}</div>
-                          </div>
-                         <div class="col"></div>
-                      </div> 
-                      <hr/> 
-                      {% endfor %}
-                
-                    </div>
-                  </div>
-
         </section>
         <!-- adddon content section[end] -->
         <!-- contact us[start] -->
@@ -177,6 +158,7 @@
     <script src="{% static 'js/c-render.js' %}"></script>
     <script>
         jQuery(document).ready(function ($) {
+            // navigation action[start]
             $(window).on("load scroll", function () {
                 if ($(window).scrollTop() > 0) {
                     $(".main_nav").addClass("nav-active");
@@ -190,6 +172,14 @@
                     //$(".main_nav_holder--img img").attr("src", upImg);
                 }
             });
+            // navigation action[end]
+            // mobile btn[start]
+            $(".ham-btn").on("click", function () {
+                $(".main_nav_holder_links").toggleClass("mob-active");
+                $(this).toggleClass("active");
+                $(this).find("i").toggleClass("fa-times");
+            });
+            // mobile btn[end]
         }(jQuery));
         particlesJS("particles-js", {
             "particles": {
