--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,22 +2,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>odinAI</title>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <title>OdinAI</title>
+  <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" />
   <!-- STYLESHEETS -->
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" >
   <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/main.css' %}" />
   <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/compiled/style.min.css' %}" />
-
-  <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 </head>
 <body>
-  <nav class="main_nav nav-active">
+  <nav class="main_nav">
     <div class="main_nav_holder">
       <div class="container">
         <div class="row align-items-center">
@@ -49,9 +48,9 @@
     <!-- banner[start] -->
     <section>
       <div class="main_banner">
-        <div class="container h-100">
+        <div class="container h-100 max-960">
           <div class="row align-items-center h-100">
-            <div class="col-md-6 col-12">
+            <div class="col-md-10 col-12">
               <div class="main_banner_content">
                 <h1 class="main_banner_content--head">OdinAI is here to help. We help you learn Deep Learning + connect you to AI jobs.</h1>
                 <h5 class="main_banner_content--desc">Finding a job in Deep Learning is difficult.<br/>We provide you with resources and make it easier for you.</h5>
@@ -73,7 +72,7 @@
     <!-- lead sections[start]-->
     <section>
       <div class="content_area py-5">
-        <div class="container">
+        <div class="container max-960">
           <div class="row">
             <div class="col-12 pb-5">
               <h2 class="common--head">Check out our content</h2>
@@ -83,14 +82,14 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-xl-4 col-md-6 offset-xl-2 offset-0">
+            <div class="col-md-6 col-12">
               <a href="{% url 'collegeblog' %}" class="content_area_btn btn-grad">Deep Learning Colleges Guides</a>
               <div class="content_area_copy">
                 <p>Content created by college graduates and seniors - courses to take, clubs to join, professors to work under and
                 more.</p>
               </div>
             </div>
-            <div class="col-xl-4 col-md-6">
+            <div class="col-md-6 col-12">
               <a href="{% url 'blog'  %}" class="content_area_btn btn-grad">Job guides</a>
               <div class="content_area_copy">
                 <p>Resources to learn Deep Learning, companies to apply to, and much more.</p>
@@ -104,84 +103,49 @@
     <!-- adddon content section[start] -->
     <section>
       <div class="content_area_articles pt-2 pb-5">
-        <div class="blogPostsContainer d-block d-sm-none d-none d-sm-block d-md-none d-none d-md-block d-lg-none">
-          <div class="container blogPage">
-            <!-- <div class="row align-items-end bp1">
-              <div class="col"></div>
-              <div class="col-10">
-                  What's happening today?
-                  <hr/>
-              </div>
-              <div class="col"></div>
-            </div> -->
-      
+        <!-- <div class="blogPostsContainer"> -->
+          <div class="container max-960">
             {% for post in Posts %}
-      
-            <div class="row rowWrapper"> 
-                <div class="col"></div>
-                <div class="col-10">
-                    <div class="postTitle"><a href="{% url 'postDetail' pk=post.pk %}">{{post.posttitle}}</a></div>
-                    <div class="postImage"><img src="/media/{{post.image}}" id="postImageID"/></div>
-                    <div class="postDescription">{{post.postsummary}}</div>
-                    <div class="postDate">{{post.created_at|date:"d M Y"}}</div>
-                </div>
-               <div class="col"></div>
-            </div> 
-            <hr/> 
-            {% endfor %}
-      
-          </div>
-        </div>
-      
-          <!-- PAGE 2: BLOG & COLLEGE POSTS for XL -->
-      
-          <div class="blogPostsContainer d-none d-lg-block d-xl-none d-none d-xl-block">
-          <div class="container blogPage">
-            <!-- <div class="row align-items-end bp1xl">
-              <div class="col"></div>
-              <div class="col-xl-12">
-                  What's happening today?
-                  <hr/>
-              </div>
-              <div class="col"></div>
-            </div> -->
-      
-            {% for post in Posts %}
-      
-            <div class="row container rowWrapperXL"> 
-                <div class="col-8">
-                    <div class="postTitlexl"><a href="{% url 'postDetail' pk=post.pk %}">{{post.posttitle}}</a></div>
-                    <div class="postDescriptionxl">{{post.postsummary}}</div>
-                    <div class="postDatexl">{{post.created_at|date:"d M Y"}}</div>
-                </div>
-                <div class="col-1"></div>
-                <div class="col-3">
-                    <div class="postImagexl"><img src="/media/{{post.image}}" id="postImageID"/></div>
-                </div>
-                
-            </div> 
-            <hr/> 
+            <div class="each_articles">
+              <div class="row"> 
+                  <div class="col-md-9 col-12">
+                      <div class="content_area_articles_copy">
+                        <h3><a href="{% url 'postDetail' pk=post.pk %}">{{post.posttitle}}</a></h3>
+                        <p>{{post.postsummary}}</p>
+                        <p class="text-secondary pt-2">{{post.created_at|date:"d M Y"}}</p>
+                      </div>
+                  </div>
+                  <div class="col-md-3 col-12">
+                    <div class="content_area_articles_img">
+                      <!-- <div class="postImagexl"> -->
+                        <img src="/media/{{post.image}}" id="postImageID" class="img-fluid" alt="Image"/>
+                      <!-- </div> -->
+                    </div>
+                  </div>
+                  
+              </div> 
+            </div>
             {% endfor %}
       
             {% for post in CPosts %}
-      
-            <div class="row container rowWrapperXL"> 
-                <div class="col-8">
-                    <div class="postTitlexl"><a href="{% url 'cpostDetail' pk=post.pk %}">{{post.cposttitle}}</a></div>
-                    <div class="postDescriptionxl">{{post.cpostsummary}}</div>
-                    <div class="postDatexl">{{post.ccreated_at|date:"d M Y"}}</div>
-                </div>
-                <div class="col-1"></div>
-                <div class="col-3">
-                    <div class="postImagexl"><img src="/media/{{post.cimage}}" id="postImageID"/></div>
-                </div>
-                
-            </div> 
-            <hr/> 
+            <div class="each_articles">
+              <div class="row"> 
+                  <div class="col-md-9 col-12">
+                    <div class="content_area_articles_copy">
+                      <h3 class=""><a href="{% url 'cpostDetail' pk=post.pk %}">{{post.cposttitle}}</a></h3>
+                      <p class="">{{post.cpostsummary}}</p>
+                      <p class="text-secondary pt-2">{{post.ccreated_at|date:"d M Y"}}</p>
+                    </div>
+                  </div>
+                  <div class="col-md-3 col-12">
+                      <div class="postImagexl"><img src="/media/{{post.cimage}}" id="postImageID"/></div>
+                  </div>
+              </div>
+            </div>
             {% endfor %}
       
           </div>
-        </div> 
+        <!-- </div>  -->
       </div>
     </section>
     <!-- adddon content section[end] -->
@@ -205,7 +169,7 @@
     <!-- contributors[start] -->
     <section>
       <div class="contributors py-5">
-        <div class="container pb-2">
+        <div class="container pb-2 max-960">
           <div class="row">
             <div class="col-12 pb-2">
               <h2 class="common--head">Contributors</h2>
@@ -252,7 +216,7 @@
     <!-- team[start] -->
     <section>
       <div class="team py-md-5 py-3">
-        <div class="container pb-2">
+        <div class="container pb-2 max-960">
           <div class="row">
             <div class="col-12 pb-2">
               <h2 class="common--head">Team</h2>
@@ -263,7 +227,7 @@
           </div>
           <div class="team_members pt-5">
             <div class="row">
-              <div class="col-md-4 col-12 offset-md-2">
+              <div class="col-md-6 col-12">
                 <a href="http://sudharshan.me">
                   <div class="team_members_each">
                     <span class="team_members_each--img">
@@ -276,7 +240,7 @@
                   </div>
                 </a>
               </div>
-              <div class="col-md-4 col-12">
+              <div class="col-md-6 col-12">
                 <a href="http://archak.me">
                   <div class="team_members_each">
                     <span class="team_members_each--img">
@@ -294,7 +258,7 @@
           <br>
           <div class="about">
             <div class="row">
-              <div class="col-md-8 col-12 offset-md-2">
+              <div class="col-md-12 col-12">
                 <div class="about_copy">
                   <h2 class="common--head">Odin</h2>
                   <br>
