--- a/jobs/templates/jobs/jobs.html
+++ b/jobs/templates/jobs/jobs.html
@@ -4,12 +4,14 @@
 <html lang="en" dir="ltr">
 
 <head>
-    <title>odinAI</title>
-
+    <title>OdinAI</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" />
+    
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    
     <!-- STYLESHEETS -->
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
@@ -39,7 +41,7 @@
 
 <body>
     <!-- navigation -->
-    <nav class="main_nav nav-active">
+    <nav class="main_nav">
         <div class="main_nav_holder">
             <div class="container">
                 <div class="row align-items-center">
@@ -71,9 +73,9 @@
         <!-- banner[start] -->
         <section>
             <div class="main_banner small">
-                <div class="container h-100">
+                <div class="container h-100 max-960">
                     <div class="row align-items-center h-100">
-                        <div class="col-md-6 col-12">
+                        <div class="col-md-10 col-12">
                             <div class="main_banner_content">
                                 <h1 class="main_banner_content--head">Deep Learning Jobs Coming Soon!</h1>
                             </div>
